--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
 
   frontend:
     build: ./frontend
+    environment:
+      - VITE_API_TARGET=http://backend:3001
     ports:
       - "3000:3000"
     depends_on:
